# personalsuite-backend-mediatracker

./: README.md  pyproject.toml  setup.py
media_tracker/: constants.py  custom_types.py  module.py
media_tracker/api/: __init__.py
media_tracker/api/v1/: __init__.py  media_controller.py  media_endpoints.py  media_translation_controller.py  media_visualization_controller.py  tv_show_episode_controller.py  tv_show_episode_translation_controller.py  tv_show_episode_visualization_controller.py  yt_channel_controller.py  yt_channel_endpoints.py
media_tracker/api/v1/media/: __init__.py  (+6 more)
media_tracker/misc/: responses.py  views.py
media_tracker/models/: media.py  tv_show_episodes.py  yt.py
media_tracker/responses/: media_responses.py  youtube_responses.py
media_tracker/services/: media_service.py  media_translation_service.py  media_visualization_service.py  tv_show_episode_service.py  tv_show_episode_translation_service.py  tv_show_episode_visualization_service.py  yt_channel_service.py
media_tracker/services/media/: media_service.py  media_translation_service.py  media_visualization_service.py  tv_show_episode_service.py  tv_show_episode_translation_service.py  tv_show_episode_visualization_service.py
media_tracker/services/youtube/: yt_channel_service.py  yt_playlist_service.py  yt_playlist_video_service.py  yt_video_service.py  yt_video_visualization_service.py
media_tracker/sql_scripts/: MT01_domains_and_types.sql  MT02_media_tables.sql  MT03_tv_show_tables.sql  MT04_yt_tables.sql
media_tracker/views/: media_views.py  youtube_views.py
(+6 files in other folders)
