[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "media-tracker"
version = "0.1.0"
dependencies = ["fastapi[standard-no-fastapi-cloud-cli]", "sqlmodel"]

[project.entry-points."personal_suite.modules"]
media_tracker = "media_tracker.module:Module"